# rwkv-lab

./: .gitignore  LICENSE  README.md  TRAINING_LEVERS.md  assemble_looped.py  attn_L3_poc.py  build_engram_patch.py  coconut.py  convert_gdn_lossless.py  convert_train.py  distill_consolidate.py  distill_objectives.py  drive_isolation.py  engram_lmb.py  eval_baseline.py  fsp_module.py  fwpkm.py  gate_ab.sh  gpu_engram_prefill.py  grok_autopilot.py  grokking_metrics.py  layer_swap.py  live_controls.py  llr.py  load_converted.py  load_mla_engram.py  lookahead_module.py  loop_probe.py  looped_rwkv.py  looped_rwkv_rosa_engram_v3.py  mla_module.py  mtp_module.py  mutor_module.py  parallel_heads_module.py  pyproject.toml  rel_sweep.sh  requirements.txt  rosa.py  rosa_soft_layer.py  rwkv8_deltanet.py  (+23 more)
.github/workflows/: tests.yml
dashboard/: .gitignore  CLAUDE.md  README.md  STACK.md  go.sum
dashboard/cmd/trainboard/: main.go
dashboard/instrumented/: train_mla.py
dashboard/internal/alerts/: detector.go  detector_test.go
dashboard/internal/convboard/: scan.go
dashboard/internal/db/: alerts.go  queries.go  queue.go  schema.go  schema_test.go  summary.go  summary_test.go  timeline.go  timeline_test.go
dashboard/internal/ingest/: parse.go  watcher.go  watcher_test.go
dashboard/internal/series/: series.go  series_test.go
dashboard/internal/server/: arch.go  artifacts.go  artifacts_test.go  control.go  convboard.go  eval_samples.go  eval_samples_test.go  experiments.go  handlers.go  handlers_test.go  livetune.go  posttraining.go  posttraining_test.go  qualification.go  qualification_test.go  render.go  render_test.go  research_capabilities.go  research_capabilities_test.go  rlvr.go  rlvr_test.go  sample.go  server.go  stream.go  tickcache.go
dashboard/internal/sysmon/: gpu.go  host.go  procs.go  procs_test.go  sysmon.go
dashboard/tools/: arch_panel.py
dashboard/web/: web.go
dashboard/web/static/: app.css  app.js  index.html  pixi-glue.js
dashboard2/: CLAUDE.md  DATA_MODEL.md  README.md  STACK.md  go.mod
dashboard2/cmd/trainboard/: main.go
dashboard2/instrumented/: train_mla.py
dashboard2/internal/alerts/: detector.go
dashboard2/internal/convboard/: scan.go
dashboard2/internal/db/: alerts.go  controls.go  layerlib.go  queries.go  schema.go  summary.go  timeline.go
dashboard2/internal/ingest/: watcher.go
dashboard2/internal/series/: series.go
dashboard2/internal/server/: alerts_handlers.go  arch.go  artifacts.go  control.go  convboard.go  leaderboard.go  livetune.go  queue.go  render.go  server.go  stream.go
dashboard2/internal/sysmon/: procs.go
dashboard2/web/static/: app.css  app.js  index.html  pixi-glue.js
docs/: MULTI_TEACHER_VISION_DISTILLATION.md  UNLABELED_IMAGE_DEDUP.md
experiments/: loops_on_recall.yaml  rlvr_arithmetic.example.jsonl  rlvr_heldout.example.jsonl
legacy/: README.md  analyze_spectrum.py  benchmark.py  build_bkv_stats.py  build_non_cvevc_bin.py  convert.py  convert_distill_progressive.py  convert_stack.py  data_stream.py  embedding_probe.py  eval_base.py  eval_both_on_non_cvevc.py  eval_mla_patch.py  eval_only.py  eval_original_qwen.py  fit_variant.py  instrumented_convert_train.py  logit_lens_sweep.py  tuned_lens.py  verify_real_layer.py
legacy/dashboard_v1/: README.md  app.py  architecture.py
scripts/: assemble_vision_cache_overlay.py  benchmark_qwen_prompt_hints.py  build_blinded_review_pack.py  build_curated_vision_manifests.py  build_doclingmatix_ocr_mix.py  build_i1_civitai_mix.py  build_i1_next_mix.py  build_unlabeled_image_manifest.py  build_updated_review_pack.py  build_vision_eight_hour_mix.py  build_vision_finish_mix.py  build_vision_sampler_receipt.py  build_vision_stage1_mix.py  download_joy_direct_images.py  draw_pose_review_boxes.py  factored_loop_sweep.sh  fetch_doclingmatix.py  fetch_i1_archives.py  fetch_i1_sources.py  fetch_joy_ipfs_samples.py  finalize_vision_cache.py  finish_vision_eight_hour_cache.sh  g1g_sweep.sh  gate_ab.sh  gate_ab2.sh  gdn_sweep.sh  handoff_vision_cache_at_10_percent.py  latent_steps_sweep.sh  latent_sweep.sh  loop_sweep.sh  midjourney_alignment.py  overnight_vision_watchdog.py  prepare_vision_next_levers.sh  rel_sweep.sh  remove_source_from_review_pack.py  repair_midjourney_i1_alignment.py  review_quality_pack.py  run_vision_eight_hour.sh  run_vision_eight_hour_grounded.sh  run_vision_finish_grounded.sh  (+9 more)
src/rwkv_lab/: __init__.py  adapter_consolidation.py  adapter_recursive.py  adapters.py  assemble_looped.py  attn_L3_poc.py  build_corpus.py  build_memory_targets.py  build_qwen35_data.py  byte_patches.py  cca_attention.py  circuit_trace.py  coda.py  compositional_muon.py  config.py  convert_gdn_lossless.py  convert_train.py  data_filter_audit.py  data_mixture.py  decoding_eval.py  decoding_policy.py  deep_vision.py  diffusion_rwkv.py  diloco.py  distill_consolidate.py  distillation_merge.py  distributed.py  drive_isolation.py  energy_refinement.py  engram_integration.py  engram_lmb.py  engram_lmb_build.py  eval_baseline.py  execution_plan.py  experiment.py  experiment_analysis.py  export_bundle.py  fsp_module.py  fused_ce.py  generate.py  (+86 more)
tests/: conftest.py  test_adaptive_halt.py  test_bst.py  test_coconut.py  test_comba.py  test_compile_core.py  test_discord_research_levers.py  test_discord_research_tranche_three.py  test_discord_research_tranche_two.py  test_dmt_graph.py  test_doclingmatix_fetch.py  test_doclingmatix_ocr_mix.py  test_engram_lmb.py  test_experiment_toolkit.py  test_fwpkm.py  test_hedgehog_coda.py  test_i1_acquisition.py  test_jtp.py  test_kimi_teacher.py  test_l3_lookup.py  test_llm_jepa.py  test_lmtp.py  test_lookahead.py  test_loop_cart.py  test_loop_deq.py  test_loop_diagnostics_fastpath.py  test_loop_fprm.py  test_loop_invariants.py  test_loop_new_features.py  test_looped_hyper.py  test_megakernel.py  test_megakernel_linear.py  test_megakernel_multitoken.py  test_megakernel_ops.py  test_midjourney_alignment.py  test_mla_cache.py  test_moonvit_vlm.py  test_muon_levers.py  test_posttrain_campaign_resilience.py  test_posttraining.py  (+27 more)
(+3 files in other folders)
