[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rwkv-lab"
version = "0.1.0"
description = "An experimental toolbox for SOTA LLM techniques — recurrent-depth loops, latent-prediction objectives, memory/retrieval, Muon-family optimizers, and cross-architecture conversion — on RWKV linear-attention cores."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sirus20x6" }]
# torch and fla (flash-linear-attention) are intentionally NOT listed: they are CUDA-stack
# specific and provided by the environment (see requirements.txt / the RWKV-7 kernel path).
dependencies = [
    "transformers>=4.57",
    "safetensors>=0.4",
    "einops>=0.8",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Everything the trainers/dashboard-adjacent scripts touch, mirroring requirements.txt.
full = [
    "accelerate>=0.34",
    "huggingface_hub>=0.25",
    "bitsandbytes>=0.45",  # >=0.45 for Blackwell sm_120 8-bit optimizer kernels
    "torchao>=0.13",       # fp8 training (Float8Linear) on Blackwell/Hopper tensor cores
    "datasets>=2.20",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sse-starlette>=2.1",
    "schedulefree>=1.4.1",
    "pynvml>=11.5",
    "psutil>=6.0",
]

[project.urls]
Repository = "https://github.com/sirus20x6/rwkv-lab"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
