[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rwkv-lab"
version = "0.1.0"
description = "An experimental toolbox for SOTA LLM techniques — recurrent-depth loops, latent-prediction objectives, memory/retrieval, Muon-family optimizers, and cross-architecture conversion — on RWKV linear-attention cores."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sirus20x6" }]
# torch and fla (flash-linear-attention) are intentionally NOT listed: they are CUDA-stack
# specific and provided by the environment (see requirements.txt / the RWKV-7 kernel path).
dependencies = [
    "transformers>=4.57",
    "safetensors>=0.4",
    "einops>=0.8",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Everything the trainers/dashboard-adjacent scripts touch, mirroring requirements.txt.
full = [
    "accelerate>=0.34",
    "huggingface_hub>=0.25",
    "bitsandbytes>=0.45",  # >=0.45 for Blackwell sm_120 8-bit optimizer kernels
    "torchao>=0.17",       # NF4 + fp8 training on Blackwell/Hopper tensor cores
    "transformer-engine[pytorch]>=2.8",  # native NVFP4 training on Blackwell
    "datasets>=2.20",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sse-starlette>=2.1",
    "schedulefree>=1.4.1",
    "pynvml>=11.5",
    "psutil>=6.0",
]
test = [
    "pytest>=8",
    "pytest-xdist>=3.6",
]
# NVIDIA's Operator API is optional: ordinary CUDA and CPU installs retain the
# cuBLAS/Triton fallback. Native adoption additionally requires an SM120 kernel
# in the installed registry and a parity/latency qualification receipt.
sm120 = [
    "nvidia-cutlass-operators>=0.1.0",
]

[project.urls]
Repository = "https://github.com/sirus20x6/rwkv-lab"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: uses a CUDA device and must run in the serialized GPU phase",
]
